# checksum_verification

./: .gitignore  README.md
filesfortests/: globalinput1.json  globalinput2.json  globalinput3.json  globalinput4.json  inputjsonexample.json
sourcescsvp/: CMakeLists.txt  crc_functions.cpp  json_structure_handler.cpp  maincsvp.cpp
sourcescsvp/include/: Algo_handler.h  crc_functions.cpp  crc_functions.h  json_structure_handler.cpp  json_structure_handler.h
sourcescsvp/servicefiles/: Algo_handler.h  CMakeLists.txt  Ciclyc_red.h
tempcsvp/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  csvp.sln  csvp.vcxproj  csvp.vcxproj.filters
tempcsvp/Testing/Temporary/: CTestCostData.txt
tempcsvp/csvp.dir/Debug/: csvp.exe.recipe
