add_library(servicefiles Algo_handler.h)

target_include_directories(servicefiles INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})

add_library(crc_algorithms STATIC Ciclyc_red.h)
add_library(json_parser STATIC json.hpp)
target_link_libraries(crc_algorithms PUBLIC csvp_compiler_flags)
target_link_libraries(json_parser PUBLIC csvp_compiler_flags)
target_link_libraries(servicefiles PRIVATE crc_algorithms)
target_link_libraries(servicefiles PRIVATE json_parser)
target_link_libraries(servicefiles PUBLIC csvp_compiler_flags)
set(installable_libs servicefiles csvp_compiler_flags)
list(APPEND installable_libs crc_algorithms)
list(APPEND installable_libs json_parser)
install(TARGETS ${installable_libs} DESTINATION lib)
